<resources>
	<string name="app_name">It\'s A Plan</string>
	<string name="title_checklist">Checklist</string>
	<string name="title_myplan">My Plan</string>
	<string name="title_passwords">Passwords</string>
	<string name="title_info">Information</string>
	<string name="header_checklist">Follow the 10 key steps to apply, pay and go to college.</string>
	<string name="header_myplan">Start with the checklist; the info and deadlines you need will be here.</string>
	<string name="completed">completed</string>
	<string name="x_of_y">%1$d of %2$d</string>
	<string name="checkpoint_next_message">You have reached the end of this section.</string>
	<string name="checkpoint_next_keep_going">Let\'s Keep Going!</string>
	<string name="checkpoint_next_onward">Onward to Step %d</string>
	<string name="error_data">Data unavailable. Please try later.</string>
	<string name="lock">Lock</string>
	<string name="unlock">Unlock</string>
	<string name="password_message">Store user names and passwords securely on your phone; this information will not be shared.</string>
	<string name="financial_aid_info">Financial Aid Info</string>
	<string name="ssn_title">Enter your and your parent/guardian(s) Social Security numbers (SSN).</string>
	<string name="ssn_mine">My SSN</string>
	<string name="ssn_parent_1">Parent/Guardian #1 SSN</string>
	<string name="ssn_parent_2">Parent/Guardian #2 SSN</string>
	<string name="drivers_license_title">Enter your driver license number.</string>
	<string name="drivers_license">Driver License Number</string>
	<string name="fsa_title">FSA ID</string>
	<string name="fsa_username">FSA username</string>
	<string name="fsa_password">FSA password</string>
	<string name="orsaa_title">ORSAA</string>
	<string name="orsaa_username">ORSAA Username</string>
	<string name="orsaa_password">ORSAA Password</string>
	<string name="college_and_scholarships">College and Scholarship Applications</string>
	<string name="application_title">The email address and password you will use for applications.</string>
	<string name="application_email">Email</string>
	<string name="application_password">Password</string>
	<string name="hint_date_picker">Tap to select date</string>
	<string name="colleges">Colleges</string>
	<string name="scholarships">Scholarships</string>
	<string name="actsat">ACT / SAT</string>
	<string name="residency">Residency Info</string>
	<string name="calendar">Calendar</string>
	<string name="my_plan_colleges">My Plan - Colleges</string>
	<string name="my_plan_scholarships">My Plan - Scholarships</string>
	<string name="my_plan_actsat">My Plan - ACT / SAT</string>
	<string name="my_plan_residency">My Plan - Residency Info</string>
	<string name="my_plan_calendar">My Plan - Calendar</string>
	<string name="cancel">Cancel</string>
	<string name="add">Add</string>
	<string name="remove">Remove</string>
	<string name="application_deadline">Application Deadline</string>
	<string name="website_url">Website URL</string>
	<string name="apply_done">I applied</string>
	<string name="apply_message">What I Need To Apply</string>
	<string name="apply_essay">Essay or personal statement</string>
	<string name="apply_recommendations">Letter(s) of recommendation</string>
	<string name="apply_activities_chart">Activities chart or resume</string>
	<string name="apply_tests">SAT or ACT</string>
	<string name="other_information">Other information</string>
	<string name="add_college">Add College</string>
	<string name="add_college_message">Please enter the name of the college.</string>
	<string name="remove_college">Remove This College</string>
	<string name="remove_college_confirm">Confirm removing \'%s\' from your college list.</string>
	<string name="college_name_hint">College Name</string>
	<string name="college_net_price_hint">Average Net Price</string>
	<string name="college_apply_addl_aid">Additional financial aid form</string>
	<string name="college_apply_addl_scholarship">Additional scholarship application</string>
	<string name="college_apply_fee_deferral">Fee deferral or waiver</string>
	<string name="college_apply_cost_hint">Cost to Apply</string>
	<string name="college_1">College 1</string>
	<string name="add_scholarship">Add Scholarship</string>
	<string name="add_scholarship_message">Please enter the name of the scholarship.</string>
	<string name="remove_scholarship">Remove This Scholarship</string>
	<string name="remove_scholarship_confirm">Confirm removing \'%s\' from your scholarship list.</string>
	<string name="scholarship_name_hint">Scholarship Name</string>
	<string name="scholarship_1">Scholarship 1</string>
	<string name="tests_act">ACT</string>
	<string name="tests_act_message">If you have taken the ACT, enter the date and your best scores.</string>
	<string name="tests_act_date">Date</string>
	<string name="tests_act_composite">Composite Score</string>
	<string name="tests_act_math">Math Score</string>
	<string name="tests_act_sciece">Science Score</string>
	<string name="tests_act_reading">Reading Score</string>
	<string name="tests_act_writing">Writing Score</string>
	<string name="tests_act_english">English Score</string>
	<string name="tests_sat">SAT</string>
	<string name="tests_sat_message">If you have taken the SAT, enter the date and your best scores.</string>
	<string name="tests_sat_date">Date</string>
	<string name="tests_sat_total">Total Score</string>
	<string name="tests_sat_reading">Reading/Writing Score</string>
	<string name="tests_sat_math">Math Score</string>
	<string name="tests_sat_essay">Essay Score</string>
	<string name="residency_page_message">If you apply to an Oregon public university you will need to answer questions about how long you and your parent/guardian have lived in the state.\n\nIf you’re not sure of the exact date, choose the 1st of the month.</string>
	<string name="residency_message1">"How long have you lived here? If you were born in Oregon, list the month and year of your birthday.</string>
	<string name="residency_message2">How long has your parent/guardian lived here?</string>
	<string name="residency_start_date">Residency Start Date</string>
	<string name="residency_end_date">Residency End Date</string>
	<string name="voter_registration">Voter Registration</string>
	<string name="voter_message1">When did you register to vote?</string>
	<string name="voter_message2">When did your parent/guardian register to vote?</string>
	<string name="voter_registration_date">Registration Date</string>
	<string name="military_service">Military Service</string>
	<string name="military_message1">Have you entered military service from Oregon?</string>
	<string name="military_message2">Has your parent/guardian entered military service from Oregon?</string>
	<string name="military_start_date">Service Start Date</string>
	<string name="military_end_date">Service End Date</string>
	<string name="taxes">Taxes</string>
	<string name="taxes_message1">What are the last two years you filed Oregon income taxes?</string>
	<string name="taxes_message2">What are the last two years your parent/guardian filed Oregon income taxes?</string>
	<string name="taxes_year1">Tax Year 1</string>
	<string name="taxes_year2">Tax Year 2</string>
	<string name="employment">Employment</string>
	<string name="employment_message">Do you or did you have a job? List your most recent or current job.</string>
	<string name="employment_name">Employer Name</string>
	<string name="employment_city">Employer City</string>
	<string name="employment_start_date">Employment Start Date</string>
	<string name="employment_end_date">Employment End Date</string>
	<string name="css_title">CSS Profile</string>
	<string name="css_username">CSS username</string>
	<string name="css_password">CSS password</string>
	<string name="extra_login_1_title">Extra Login #1</string>
	<string name="osac_username">OSAC username</string>
	<string name="osac_password">OSAC password</string>
	<string name="osac_title">OSAC</string>
	<string name="username">Username</string>
	<string name="organization">Organization</string>
	<string name="extra_login_2_title">Extra Login #2</string>
	<string name="welcome_title">College is right around the corner.</string>
	<string name="welcome_message">Use the It\'s A Plan app regularly throughout your senior year to stay on track and store the info you need. Apply, pay and go to college by following our 10 key steps.</string>
	<string name="welcome_confirm">Let\'s get started!</string>
	<string name="checkpoint_incomplete">You must complete this before proceeding.</string>
	<string name="pin_message_create">You need to setup a 4 digit PIN for accessing your passwords.</string>
	<string name="pin_message_enter">Enter 4 digit PIN for accessing your passwords.</string>
	<string name="pin_hint">Enter 4 digit PIN</string>
	<string name="pin_button_create">Set PIN</string>
	<string name="pin_error">PIN is not correct.</string>
	<string name="pin_encrypt_error">Sorry - there was an unexpected issue storing your PIN safely.</string>
	<string name="calendar_no_events">no events</string>
	<string name="calendar_error_loading">Unable to load all of the calendar events.</string>
	<string name="channel_name">It\'s A Plan notifications</string>
	<string name="channel_description">Messages and reminders from It\'s A Plan</string>
</resources>
