<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<import type="android.view.View" />

		<variable
			name="viewModel"
			type="org.oregongoestocollege.itsaplan.viewmodel.ResidencyViewModel" />
	</data>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/baseline_unit_2x">

			<!-- stops view from scrolling to / focusing on first EditText -->
			<View
				android:id="@+id/focus_view"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:focusable="true"
				android:focusableInTouchMode="true">

				<requestFocus />
			</View>

			<TextView
				android:id="@+id/textview_message"
				style="@style/GearUpMessage1"
				android:text="@string/residency_page_message" />

			<!-- Residency -->
			<TextView
				android:id="@+id/textview_title_residency"
				style="@style/GearUpSectionTitle"
				android:layout_below="@+id/textview_message"
				android:text="@string/residency" />

			<LinearLayout
				android:id="@+id/layout_1"
				style="@style/GearUpSectionLayout"
				android:layout_below="@+id/textview_title_residency">

				<TextView
					style="@style/GearUpMessage2"
					android:text="@string/residency_message1" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.residencyStartDateVm}" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.residencyEndDateVm}" />

				<TextView
					style="@style/GearUpMessage2"
					android:text="@string/residency_message2" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.parentResidencyStartDateVm}" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.parentResidencyEndDateVm}" />
			</LinearLayout>

			<!-- Voter Registration -->
			<TextView
				android:id="@+id/textview_title_voter"
				style="@style/GearUpSectionTitle"
				android:layout_below="@+id/layout_1"
				android:text="@string/voter_registration" />

			<LinearLayout
				android:id="@+id/layout_2"
				style="@style/GearUpSectionLayout"
				android:layout_below="@+id/textview_title_voter">

				<TextView
					style="@style/GearUpMessage2"
					android:text="@string/voter_message1" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.registerToVoteDateVm}" />

				<TextView
					style="@style/GearUpMessage2"
					android:text="@string/voter_message2" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.parentsRegisterToVoteDateVm}" />
			</LinearLayout>

			<!-- Military -->
			<TextView
				android:id="@+id/textview_title_military"
				style="@style/GearUpSectionTitle"
				android:layout_below="@+id/layout_2"
				android:text="@string/military_service" />

			<LinearLayout
				android:id="@+id/layout_3"
				style="@style/GearUpSectionLayout"
				android:layout_below="@+id/textview_title_military">

				<TextView
					style="@style/GearUpMessage2"
					android:text="@string/military_message1" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.militaryServiceStartDateVm}" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.militaryServiceEndDateVm}" />

				<TextView
					style="@style/GearUpMessage2"
					android:text="@string/military_message2" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.parentMilitaryServiceStartDateVm}" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.parentMilitaryServiceEndDateVm}" />
			</LinearLayout>

			<!-- Taxes -->
			<TextView
				android:id="@+id/textview_title_taxes"
				style="@style/GearUpSectionTitle"
				android:layout_below="@+id/layout_3"
				android:text="@string/taxes" />

			<LinearLayout
				android:id="@+id/layout_4"
				style="@style/GearUpSectionLayout"
				android:layout_below="@+id/textview_title_taxes">

				<TextView
					style="@style/GearUpMessage2"
					android:text="@string/taxes_message1" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.fileOregonTaxesYear1DateVm}" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.fileOregonTaxesYear2DateVm}" />

				<TextView
					style="@style/GearUpMessage2"
					android:text="@string/taxes_message2" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.parentsFileOregonTaxesYear1DateVm}" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.parentsFileOregonTaxesYear2DateVm}" />
			</LinearLayout>

			<!-- Employment -->
			<TextView
				android:id="@+id/textview_title_employment"
				style="@style/GearUpSectionTitle"
				android:layout_below="@+id/layout_4"
				android:text="@string/employment" />

			<LinearLayout
				android:id="@+id/layout_5"
				style="@style/GearUpSectionLayout"
				android:layout_below="@+id/textview_title_employment">

				<TextView
					style="@style/GearUpMessage2"
					android:text="@string/employment_message" />

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<com.google.android.material.textfield.TextInputEditText
						style="@style/GearUpTextMaxLengthDefault"
						android:hint="@string/employment_name"
						android:text="@={viewModel.nameEmployer1}" />
				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<com.google.android.material.textfield.TextInputEditText
						style="@style/GearUpTextMaxLengthDefault"
						android:hint="@string/employment_city"
						android:text="@={viewModel.cityEmployer1}" />
				</com.google.android.material.textfield.TextInputLayout>

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.startEmployer1DateVm}" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.endEmployer1DateVm}" />
			</LinearLayout>
		</RelativeLayout>
	</ScrollView>
</layout>