<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<import type="android.view.View" />

		<variable
			name="viewModel"
			type="org.oregongoestocollege.itsaplan.viewmodel.CollegeViewModel" />
	</data>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/baseline_unit_2x">

		<!-- stops view from scrolling to / focusing on first EditText -->
		<View
			android:id="@+id/focus_view"
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:focusable="true"
			android:focusableInTouchMode="true">

			<requestFocus />
		</View>

		<TextView
			android:id="@+id/textview_title"
			style="@style/GearUpSectionTitle"
			android:text="@{viewModel.name}"
			tools:text="my college pick" />

		<LinearLayout
			android:id="@+id/layout_1"
			style="@style/GearUpSectionLayout"
			android:layout_below="@+id/textview_title">

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<com.google.android.material.textfield.TextInputEditText
					style="@style/GearUpTextMaxLengthDefault"
					android:hint="@string/college_name_hint"
					android:text="@={viewModel.name}"
					tools:text="my college" />
			</com.google.android.material.textfield.TextInputLayout>

			<include
				layout="@layout/date_layout"
				app:viewModel="@{viewModel.applicationDateVm}" />

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<com.google.android.material.textfield.TextInputEditText
					style="@style/GearUpTextMaxLengthDefault"
					android:hint="@string/college_net_price_hint"
					android:text="@={viewModel.averageNetPrice}"
					tools:text="10,000" />
			</com.google.android.material.textfield.TextInputLayout>

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/baseline_unit"
				android:layout_marginTop="@dimen/baseline_unit"
				android:checked="@={viewModel.applicationDone}"
				android:text="@string/apply_done" />
		</LinearLayout>

		<TextView
			android:id="@+id/textview_subtitle"
			style="@style/GearUpSectionSubTitle.Gray"
			android:layout_below="@+id/layout_1"
			android:text="@string/apply_message" />

		<LinearLayout
			android:id="@+id/layout_2"
			style="@style/GearUpSectionLayout"
			android:layout_below="@+id/textview_subtitle">

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.essayDone}"
				android:text="@string/apply_essay" />

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.recommendationsDone}"
				android:text="@string/apply_recommendations" />

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.activitiesChartDone}"
				android:text="@string/apply_activities_chart" />

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.testsDone}"
				android:text="@string/apply_tests" />

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.addlFinancialAidDone}"
				android:text="@string/college_apply_addl_aid" />

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.addlScholarshipDone}"
				android:text="@string/college_apply_addl_scholarship" />

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.feeDeferralDone}"
				android:text="@string/college_apply_fee_deferral" />

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<com.google.android.material.textfield.TextInputEditText
					style="@style/GearUpTextMaxLengthDefault"
					android:hint="@string/college_apply_cost_hint"
					android:text="@={viewModel.applicationCost}"
					tools:text="10,000" />
			</com.google.android.material.textfield.TextInputLayout>
		</LinearLayout>

		<Button
			style="@style/GearUpRemoveButton"
			android:layout_below="@+id/layout_2"
			android:onClick="@{(view) -> viewModel.onRemoveCollege(view)}"
			android:text="@string/remove_college"
			android:visibility="@{viewModel.isRemovable ? View.VISIBLE : View.GONE, default=gone}"
			tools:visibility="visible" />

	</RelativeLayout>
</layout>
