<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<import type="android.view.View" />

		<variable
			name="viewModel"
			type="org.oregongoestocollege.itsaplan.viewmodel.ScholarshipViewModel" />
	</data>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/baseline_unit_2x">

		<!-- stops view from scrolling to / focusing on first EditText -->
		<View
			android:id="@+id/focus_view"
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:focusable="true"
			android:focusableInTouchMode="true">

			<requestFocus />
		</View>

		<TextView
			android:id="@+id/textview_title"
			style="@style/GearUpSectionTitle"
			android:text="@{viewModel.name}"
			tools:text="scholarship 1" />

		<LinearLayout
			android:id="@+id/layout_1"
			style="@style/GearUpSectionLayout"
			android:layout_below="@+id/textview_title">

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
					style="@style/GearUpTextMaxLengthDefault"
					android:hint="@string/scholarship_name_hint"
						android:text="@={viewModel.name}"
					tools:text="my scholarship" />
			</android.support.design.widget.TextInputLayout>

			<include
				layout="@layout/date_layout"
				app:viewModel="@{viewModel.applicationDateVm}"/>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
					style="@style/GearUpTextMaxLengthDefault"
					android:hint="@string/website_url"
					android:inputType="textUri"
					android:text="@={viewModel.website}"
					tools:text="https://gotocollege" />
			</android.support.design.widget.TextInputLayout>

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/baseline_unit"
				android:layout_marginTop="@dimen/baseline_unit"
				android:checked="@={viewModel.applicationDone}"
				android:text="@string/apply_done" />
		</LinearLayout>

		<TextView
			android:id="@+id/textview_subtitle"
			style="@style/GearUpSectionSubTitle.Gray"
			android:layout_below="@+id/layout_1"
			android:text="@string/apply_message" />

		<LinearLayout
			android:id="@+id/layout_2"
			style="@style/GearUpSectionLayout"
			android:layout_below="@+id/textview_subtitle">

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.essayDone}"
				android:text="@string/apply_essay" />

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.recommendationsDone}"
				android:text="@string/apply_recommendations" />

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.activitiesChartDone}"
				android:text="@string/apply_activities_chart" />

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="@={viewModel.testsDone}"
				android:text="@string/apply_tests" />

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/other_information"
					android:inputType="text"
					android:text="@={viewModel.otherInfo}"
					tools:text="more info" />
			</android.support.design.widget.TextInputLayout>
		</LinearLayout>

		<Button
			style="@style/GearUpRemoveButton"
			android:layout_below="@+id/layout_2"
			android:onClick="@{(view) -> viewModel.onRemoveScholarship(view)}"
			android:text="@string/remove_scholarship"
			android:visibility="@{viewModel.isRemovable ? View.VISIBLE : View.GONE, default=gone}"
			tools:visibility="visible" />

	</RelativeLayout>
</layout>
