<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<import type="android.view.View" />

		<variable
			name="viewModel"
			type="org.oregongoestocollege.itsaplan.viewmodel.TestResultsViewModel" />
	</data>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/baseline_unit_2x">

			<TextView
				android:id="@+id/textview_title_act"
				style="@style/GearUpMyPlanTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/baseline_unit"
				android:text="@string/tests_act" />

			<LinearLayout
				android:id="@+id/layout_1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/textview_title_act"
				android:orientation="vertical"
				android:paddingEnd="@dimen/baseline_unit_2x"
				android:paddingStart="@dimen/baseline_unit_2x">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/baseline_unit"
					android:layout_marginTop="@dimen/baseline_unit"
					android:text="@string/tests_act_message" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.actVm.testDateVm}"
					app:dateLabel="@{@string/tests_act_date}"/>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						style="@style/GearUpMyPlanTextInputScore"
						android:hint="@string/tests_act_composite"
						android:text="@{viewModel.actVm.composite}"
						tools:text="500" />
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						style="@style/GearUpMyPlanTextInputScore"
						android:hint="@string/tests_act_math"
						android:text="@{viewModel.actVm.math}"
						tools:text="500" />
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						style="@style/GearUpMyPlanTextInputScore"
						android:hint="@string/tests_act_sciece"
						android:text="@{viewModel.actVm.science}"
						tools:text="500" />
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						style="@style/GearUpMyPlanTextInputScore"
						android:hint="@string/tests_act_reading"
						android:text="@{viewModel.actVm.reading}"
						tools:text="500" />
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						style="@style/GearUpMyPlanTextInputScore"
						android:hint="@string/tests_act_writing"
						android:text="@{viewModel.actVm.writing}"
						tools:text="500" />
				</android.support.design.widget.TextInputLayout>
			</LinearLayout>

			<TextView
				android:id="@+id/textview_title_sat"
				style="@style/GearUpMyPlanTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/layout_1"
				android:layout_marginBottom="@dimen/baseline_unit"
				android:layout_marginTop="@dimen/baseline_unit_2x"
				android:text="@string/tests_sat" />

			<LinearLayout
				android:id="@+id/layout_2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/textview_title_sat"
				android:orientation="vertical"
				android:paddingEnd="@dimen/baseline_unit_2x"
				android:paddingStart="@dimen/baseline_unit_2x">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/baseline_unit"
					android:layout_marginTop="@dimen/baseline_unit"
					android:text="@string/tests_sat_message" />

				<include
					layout="@layout/date_layout"
					app:viewModel="@{viewModel.satVm.testDateVm}"
					app:dateLabel="@{@string/tests_sat_date}"/>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						style="@style/GearUpMyPlanTextInputScore"
						android:hint="@string/tests_sat_total"
						android:text="@{viewModel.satVm.composite}"
						tools:text="500" />
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						style="@style/GearUpMyPlanTextInputScore"
						android:hint="@string/tests_sat_reading"
						android:text="@{viewModel.satVm.reading}"
						tools:text="500" />
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						style="@style/GearUpMyPlanTextInputScore"
						android:hint="@string/tests_sat_math"
						android:text="@{viewModel.satVm.math}"
						tools:text="500" />
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<android.support.design.widget.TextInputEditText
						style="@style/GearUpMyPlanTextInputScore"
						android:hint="@string/tests_sat_essay"
						android:text="@{viewModel.satVm.writing}"
						tools:text="500" />
				</android.support.design.widget.TextInputLayout>
			</LinearLayout>
		</RelativeLayout>

	</ScrollView>
</layout>
