<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_horizontal_margin"
	android:paddingEnd="@dimen/activity_vertical_margin"
	android:paddingStart="@dimen/activity_vertical_margin"
	android:paddingTop="@dimen/activity_horizontal_margin">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:background="@drawable/checkpoint_background"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_horizontal_margin"
		android:paddingEnd="@dimen/baseline_unit_3x"
		android:paddingStart="@dimen/baseline_unit_3x"
		android:paddingTop="@dimen/activity_horizontal_margin">

		<TextView
			android:id="@+id/text_view_pin_message"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="16sp"
			android:layout_marginBottom="32dp"
			android:text="@string/pin_message_create" />

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/edit_text_pin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/pin_hint"
				android:inputType="numberPassword"
				android:maxLength="4" />
		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/button_set_pin"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_marginTop="@dimen/baseline_unit"
			android:layout_marginBottom="@dimen/baseline_unit"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text= "@string/pin_button_create" />
	</LinearLayout>

</FrameLayout>